fix: Footnotes broken wrapping behaviour in long lines.
- limit width of footnote elements to 100% of it's container.
- use `overflow-wrap` to break down label text to next line.
- allow label text to shrink via `flex-shrink` flag.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -863,11 +863,15 @@ footer {
   display: flex;
   line-height: 1.1em;
   align-items: center;
+  width: 100%;
+  overflow-wrap: anywhere;
 
   &-label {
     font-size: 1em;
     margin-right: 0.5em;
     min-width: 3ch;
+    overflow-wrap: break-word;
+    flex-shrink: 1;
 
     &::after {
       content: ".";
